# bitboard_chess

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  cmake_install.cmake  main.cpp
src/: main.cpp
src/board/: bitboard.cpp  compressed_board.cpp
src/include/: bitboard.h
src/test/: test_bitboard.cpp
